# video_player_protogen_app

./: CMakeLists.txt  cmake_vars.h.in  setup_dev.sh
src/: ProtogenAppTest.cpp  VideoPlayer.cpp
